--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "pylint.args": [
-        "--disable=pointless-string-statement,wrong-import-position"
+        "--disable=pointless-string-statement,wrong-import-position,invalid-name"
     ]
 }
