--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
+    // ==PyLint::-->>
     "pylint.args": [
         "--disable=pointless-string-statement,wrong-import-position,invalid-name"
-    ]
+    ],
+    // --<<
+    // ==C-Spell::-->>
+    // Words to add to dictionary for a workspace.
+    "cSpell.words": [
+        "Ref", "Reeborg",
+    ],
+    // --<<
 }
