--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     // ==C-Spell::-->>
     // Words to add to dictionary for a workspace.
     "cSpell.words": [
-        "Ref", "Reeborg",
+        "Ref", "Reeborg", "replit",
     ],
     // --<<
 }
