--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,12 @@
     // ==C-Spell::-->>
     // Words to add to dictionary for a workspace.
     "cSpell.words": [
-        "Ref", "Reeborg", "replit", "Pythonista", "ltrs",
+        "BODMAS",
+        "hotdog",
+        "ltrs",
+        "mentos",
+        "PEMDAS", "Pythonista",
+        "Ref", "rollercoaster", "replit", "Reeborg",
     ],
     // --<<
 }
