--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     // Words to add to dictionary for a workspace.
     "cSpell.words": [
         "BODMAS",
+        "ezdbg",
         "hotdog",
         "ltrs",
         "mentos",
