--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
+// Localised settings sepcific to **this** workspace
 {
-    // ==PyLint::-->>
+    // ++++ PYTHON ++++
+    // "python.defaultInterpreterPath": "/home/freeman/micromamba/envs/udemy-python/bin/python",
+    // == PyLint ==
     "pylint.args": [
         "--disable=pointless-string-statement,wrong-import-position,invalid-name"
     ],
-    // --<<
-    // ==C-Spell::-->>
+    // ++++ C-Spell ++++
     // Words to add to dictionary for a workspace.
     "cSpell.words": [
         "BODMAS",
@@ -15,5 +17,4 @@
         "PEMDAS", "Pythonista",
         "Ref", "rollercoaster", "replit", "Reeborg",
     ],
-    // --<<
 }
