--- a/.gitignore
+++ b/.gitignore
@@ -208,7 +208,7 @@ pyrightconfig.json
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
-!.vscode/tasks.json
+#!.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
