vscode: Added words to local cSpell dictionary (from "d-016")

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,7 @@
         "mentos",
         "PEMDAS", "Pythonista",
         "Ref", "rollercoaster", "replit", "Reeborg",
+        "Squirtle",
+        "Udemy",
     ],
 }
