vscode: Added words to local cSpell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,8 @@
         "hotdog",
         "ltrs",
         "mentos",
-        "PEMDAS", "Pythonista",
-        "Ref", "rollercoaster", "replit", "Reeborg",
+        "PEMDAS", "Pythonista", "Pythonistas",
+        "Ref", "Refs", "rollercoaster", "replit", "Reeborg",
         "Squirtle",
         "Udemy",
     ],
