--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     // ++++ C-Spell ++++
     // Words to add to dictionary for a workspace.
     "cSpell.words": [
+        "aiohttp",
         "BODMAS",
         "ezdbg",
         "hotdog",
