vscode: Added word to local cSpell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "hotdog",
         "ltrs",
         "mentos",
+        "opentriviadb",
         "PEMDAS", "Pythonista", "Pythonistas",
         "Ref", "Refs", "rollercoaster", "replit", "Reeborg",
         "Squirtle",
